--- a/deployment.yaml
+++ b/deployment.yaml
@@ -16,15 +16,6 @@ spec:
     spec:
       imagePullSecrets:
         - name: regcred
-      containers:
-        - name: goserver
-          image: "21lucasmessias/go-hello:v3"
-          volumeMounts:
-            - mountPath: "/go/family/"
-              name: config
-          envFrom:
-            - configMapRef:
-                name: goserver-env
 
       volumes:
         - name: config
@@ -33,3 +24,15 @@ spec:
             items: 
             - key: members
               path: myfamily.txt
+
+      containers:
+        - name: goserver
+          image: "21lucasmessias/go-hello:v4"
+          volumeMounts:
+            - mountPath: "/go/family/"
+              name: config
+          envFrom:
+            - configMapRef:
+                name: goserver-env
+            - secretRef:
+                name: goserver-secret
